# GameServer

./: BuildServerSln.bat  CMakeLists.txt  CreateServerSln.bat
dep/: CMakeLists.txt
dep/backtrace/: CMakeLists.txt
dep/include/boost-extension/libs/extension/scripts/: GenerateHeaders.py
dep/include/gsoap/: stdsoap2.h
dep/nedmalloc/: CMakeLists.txt
dep/src/: CMakeLists.txt
dep/src/gsoap/: stdsoap2.cpp
src/bindings/universal/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/Platform/: Define.h
src/framework/Policies/: MemoryManagement.cpp
src/game/: CMakeLists.txt  Creature.cpp  Creature.h  DynamicObject.cpp  DynamicObject.h  GameObject.cpp  GameObject.h  Object.cpp  Object.h  ObjectAccessor.cpp  ObjectAccessor.h  ObjectMgr.cpp  ObjectMgr.h  Player.cpp  Player.h  Unit.cpp  Unit.h  World.cpp  World.h  WorldSession.cpp  WorldSession.h  WorldSocket.cpp  WorldSocket.h  WorldSocketMgr.cpp  WorldSocketMgr.h  pchdef.h
src/game/Msg/: BaseCmd.h  HeroCardCmd.h
src/game/NetMsgHandle/: ByCmdMsg.h  CmdType.h  GameObjectHandle.cpp  GameObjectHandle.h  NetDispHandle.h  NetMsgHandleManager.cpp  NetMsgHandleManager.h  NetMsgHandleManagerBase.cpp  NetMsgHandleManagerBase.h  NullUserCmd.h  ObjectCmd.h  UtilMsg.cpp  UtilMsg.h
src/game/Verify/: VerifyThread.cpp  VerifyThread.h
src/mangosd/: CMakeLists.txt  MaNGOSsoap.cpp  MaNGOSsoap.h  Main.cpp  Master.cpp  RASocket.cpp  RASocket.h  WorldRunnable.cpp  soapC.cpp  soapH.h  soapServer.cpp  soapStub.h
src/realmd/: AuthSocket.cpp  AuthSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  SessionManager.cpp
src/shared/: CMakeLists.txt  Common.h  ProgressBar.cpp  Timer.h  Util.cpp  Version.h
src/shared/Config/: Config.h
src/shared/DataStruct/: BufferDefaultValue.h  BufferUtil.cpp  BufferUtil.h  ByteBuffer.cpp  ByteBuffer.h  ByteConverter.h  DynBufResizePolicy.cpp  DynBufResizePolicy.h  DynBuffer.cpp  DynBuffer.h  Error.h  INetMgr.h  MBufferDefaultValue.h  MBufferFlag.h  MBufferUtil.cpp  MBufferUtil.h  MByteBuffer.cpp  MByteBuffer.h  MByteConverter.h  MCircularBuffer.cpp  MCircularBuffer.h  MDynBufResizePolicy.cpp  MDynBufResizePolicy.h  MDynBuffer.cpp  MDynBuffer.h  MStorageBuffer.cpp  MStorageBuffer.h  MSystemEndian.h  Singleton.h  StorageBuffer.cpp  StorageBuffer.h  System.cpp  System.h  SystemEndian.h
src/shared/Database/: Database.h  QueryResult.h  SQLStorageImpl.h  SqlPreparedStatement.h
src/shared/Log/: Log.cpp  Log.h
src/shared/NetMsgHandle/: NetCmdHandleBase.h  NetDispHandle.h
src/shared/Network/: MClient.cpp  MClient.h  MClientManager.cpp  MClientManager.h  MClientProcessData.cpp  MClientProcessData.h  MClientThread.cpp  MClientThread.h  MClientThreadSafeData.cpp  MClientThreadSafeData.h  MMsgBuffer.cpp  MMsgBuffer.h  MNetClientBuffer.cpp  MNetClientBuffer.h  MsgBuffer.cpp  MsgBuffer.h  NetClientBuffer.cpp  NetClientBuffer.h  NetworkManager.cpp  NetworkManager.h  NetworkThread.cpp  NetworkThread.h  ProtocolDefinitions.h  Socket.cpp  Socket.h
src/shared/Thread/: Threading.cpp
src/shared/Util/: Encrypt.cpp  Encrypt.h  MCompress.cpp  MCompress.h  MemOp.cpp  MemOp.h  Util.cpp  WarnPop.h  WarnPush.h
win/: mangosdVC.sln
win/VC110/: game.vcxproj  game.vcxproj.filters  mangosd.vcxproj  mangosd.vcxproj.filters  realmd.conf  realmd.vcxproj  shared.vcxproj  shared.vcxproj.filters
